force-app/main/default/objects/docutizexa__ReportField__c/docutizexa__ReportField__c.object-meta.xml
<CustomObject>
    <label>Report Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>