force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__Formula__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Formula__c</fullName>
    <label>Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>