force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__FormulaUseAPIName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__FormulaUseAPIName__c</fullName>
    <label>Formula Use API Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>