force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__IsAggregate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__IsAggregate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregate Field</label>
    <type>Checkbox</type>
</CustomField>