force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ObjectApiName__c</fullName>
    <label>Object Api Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>