force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__ObjectApiNameForSOQL__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ObjectApiNameForSOQL__c</fullName>
    <label>Object Api Name For SOQL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>