force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>