force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__Report__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Report__c</fullName>
    <label>Setting</label>
    <referenceTo>docutizexa__Report__c</referenceTo>
    <relationshipLabel>Report Fields</relationshipLabel>
    <relationshipName>ReportFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>