force-app/main/default/objects/docutizexa__ReportField__c/fields/docutizexa__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__SortOrder__c</fullName>
    <label>並び順</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>